--- a/src/css/app.css
+++ b/src/css/app.css
@@ -2,57 +2,52 @@
 @font-face {
   font-weight: 400;
   font-family: "Roboto";
-  src: url("../fonts/Roboto-Regular.ttf");
-}
-
+  src: url("../fonts/Roboto-Regular.ttf"); }
 @font-face {
   font-weight: 700;
   font-family: "Roboto";
-  src: url("../fonts/Roboto-Bold.ttf");
-}
-
+  src: url("../fonts/Roboto-Bold.ttf"); }
 @font-face {
   font-weight: 500;
   font-family: "Roboto";
-  src: url("../fonts/Roboto-Medium.ttf");
-}
+  src: url("../fonts/Roboto-Medium.ttf"); }
+*,
+*::before,
+*::after {
+  box-sizing: border-box; }
 
 body {
+  min-width: 414px;
   font-family: "Roboto", sans-serif;
   font-size: 18px;
   line-height: 1.5;
   color: #CACACA;
-  background-color: #08020D;
-}
+  background-color: #08020D; }
 
 h1 {
   font-size: 30px;
   line-height: 45px;
   font-weight: 700;
   text-transform: uppercase;
-}
+  /* TODO: Добавь разрешение для десктопа */
+  /* @media () {
+      font-size: 60px;
+      line-height: 90px;
+      font-weight: 700;
+      text-transform: uppercase;
+  } */ }
 
 h2 {
   font-size: 18px;
   line-height: 27px;
   font-weight: 700;
   text-transform: uppercase;
-}
+  /* TODO: Добавь разрешение для десктопа */
+  /* @media () {
+      font-size: 38px;
+      line-height: 57px;
+      font-weight: 700;
+      text-transform: uppercase;
+  } */ }
 
-/* TODO: Добавь разрешение для десктопа */
-/* @media () {
-    h1 {
-        font-size: 60px;
-        line-height: 90px;
-        font-weight: 700;
-        text-transform: uppercase;
-    }
-
-    h2 {
-        font-size: 38px;
-        line-height: 57px;
-        font-weight: 700;
-        text-transform: uppercase;
-    }
-} */
 /*# sourceMappingURL=app.css.map */
