--- a/src/scss/general.scss
+++ b/src/scss/general.scss
@@ -1,22 +1,11 @@
-@font-face {
-    font-weight: 400;
-    font-family: "Roboto";
-    src: url("../fonts/Roboto-Regular.ttf");
-}
-
-@font-face {
-    font-weight: 700;
-    font-family: "Roboto";
-    src: url("../fonts/Roboto-Bold.ttf");
-}
-
-@font-face {
-    font-weight: 500;
-    font-family: "Roboto";
-    src: url("../fonts/Roboto-Medium.ttf");
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
 }
 
 body {
+    min-width: 414px;
     font-family: $main-font;
     font-size: 18px;
     line-height: 1.5;
@@ -29,6 +18,14 @@ h1 {
     line-height: 45px;
     font-weight: 700;
     text-transform: uppercase;
+
+    /* TODO: Добавь разрешение для десктопа */
+    /* @media () {
+        font-size: 60px;
+        line-height: 90px;
+        font-weight: 700;
+        text-transform: uppercase;
+    } */
 }
 
 h2 {
@@ -36,21 +33,12 @@ h2 {
     line-height: 27px;
     font-weight: 700;
     text-transform: uppercase;
-}
 
-/* TODO: Добавь разрешение для десктопа */
-/* @media () {
-    h1 {
-        font-size: 60px;
-        line-height: 90px;
-        font-weight: 700;
-        text-transform: uppercase;
-    }
-
-    h2 {
+    /* TODO: Добавь разрешение для десктопа */
+    /* @media () {
         font-size: 38px;
         line-height: 57px;
         font-weight: 700;
         text-transform: uppercase;
-    }
-} */
+    } */
+}
