--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,10 +1,14 @@
 $main-font: "Roboto", sans-serif;
 
 $black: #08020D;
+$white: #FFFFFF;
 $gray: #E0E0E0;
+$light-gray: #757575;
 $dark-gray: #CACACA;
 $dark-violet: #3C3B3D;
 $green: #34C176;
 $orange: #F89202;
 $purple: #5328A1;
 $red: #95390C;
+
+$desktop-width: 1240px;
