--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,3 +1,9 @@
 @import "fonts";
 @import "variables";
 @import "general";
+@import "blocks/page-header";
+@import "blocks/logo";
+@import "blocks/page-description";
+@import "blocks/button";
+@import "blocks/page-main";
+@import "blocks/page-footer";
