--- a/src/scss/general.scss
+++ b/src/scss/general.scss
@@ -5,7 +5,8 @@
 }
 
 body {
-    min-width: 414px;
+    margin: 0;
+    padding: 0;
     font-family: $main-font;
     font-size: 18px;
     line-height: 1.5;
@@ -14,31 +15,57 @@ body {
 }
 
 h1 {
+    margin: 0;
     font-size: 30px;
     line-height: 45px;
     font-weight: 700;
     text-transform: uppercase;
 
-    /* TODO: Добавь разрешение для десктопа */
-    /* @media () {
+    @media (min-width: $desktop-width) {
         font-size: 60px;
         line-height: 90px;
         font-weight: 700;
-        text-transform: uppercase;
-    } */
+    }
 }
 
 h2 {
+    margin: 0;
     font-size: 18px;
     line-height: 27px;
     font-weight: 700;
     text-transform: uppercase;
 
-    /* TODO: Добавь разрешение для десктопа */
-    /* @media () {
+    @media (min-width: $desktop-width) {
         font-size: 38px;
         line-height: 57px;
         font-weight: 700;
-        text-transform: uppercase;
-    } */
+    }
+}
+
+h3 {
+    margin: 0;
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 700;
+    text-transform: uppercase;
+
+    @media (min-width: $desktop-width) {
+        font-size: 24px;
+        line-height: 45px;
+        font-weight: 400;
+    }
+}
+
+h4 {
+    margin: 0;
+    font-size: 18px;
+    line-height: 24px;
+    font-weight: 700;
+    text-transform: uppercase;
+
+    @media (min-width: $desktop-width) {
+        font-size: 18px;
+        line-height: 27px;
+        font-weight: 700;
+    }
 }
