--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -6,4 +6,5 @@
 @import "blocks/page-description";
 @import "blocks/button";
 @import "blocks/page-main";
+@import "blocks/subscription";
 @import "blocks/page-footer";
